Venuelist, venuedetails, pay pages added Added fragments for header

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,8 +6,7 @@
     <title>Home</title>
 </head>
 <body>
-<h1>This is the home page</h1>
-<a href="about">about</a>
+<div th:replace="fragments/header :: header">Header</div>
 <p th:text="${mySpecialNumber}">Myspecialnumber</p>
 
 </body>
