--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -3,11 +3,11 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>About</title>
+    <title>Pay</title>
 </head>
 <body>
-<div th:replace="fragments/header :: header">Header</div>
-<p th:text="${mySpecialNumber}">MySpecialNumber</p>
+<p th:text="${date}"></p>
+<p th:text="${newDate}"></p>
 
 </body>
 </html>
