--- a/src/main/resources/templates/venuedetails.html
+++ b/src/main/resources/templates/venuedetails.html
@@ -3,11 +3,15 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>About</title>
+    <title>Venue Details</title>
 </head>
 <body>
-<div th:replace="fragments/header :: header">Header</div>
-<p th:text="${mySpecialNumber}">MySpecialNumber</p>
+<a th:href="@{/venuelist}">Terug</a>
+<div class="row1">
+    <div class="row1content">
+        <h2 th:text="${venueName}"></h2>
+    </div>
+</div>
 
 </body>
 </html>
