--- a/src/main/resources/templates/venuedetails.html
+++ b/src/main/resources/templates/venuedetails.html
@@ -9,7 +9,13 @@
 <a th:href="@{/venuelist}">Terug</a>
 <div class="row1">
     <div class="row1content">
-        <h2 th:text="${venueName}"></h2>
+        <div th:if="${errors}">
+            <p th:each="error : ${errors}" th:text="${error}">error</p>
+        </div>
+
+
+        <h2 th:if="${venueName}" th:text="${venueName}">venuedetails</h2>
+        <p th:unless="${venueName}">No venue was chosen</p>
     </div>
 </div>
 
