--- a/src/main/resources/templates/fragments/stylesheets.html
+++ b/src/main/resources/templates/fragments/stylesheets.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <div th:fragment="stylesheet">
-    <link rel="stylesheet" th:href="@{css/reset.css}" href="css/reset.css">
-    <link rel="stylesheet" th:href="@{css/stylesheet.css}" href="css/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="all"  th:href="@{/css/reset.css}" href="../static/css/reset.css">
+    <link rel="stylesheet" type="text/css" media="all"  th:href="@{/css/style.css}" href="../static/css/style.css">
 </div>
 
 </body>
