--- a/src/main/resources/templates/venuedetails.html
+++ b/src/main/resources/templates/venuedetails.html
@@ -16,13 +16,25 @@
 
     <div th:if="${venue!=null}">
     <h2 th:text="${venue.getVenuename()}">venuedetails</h2>
-    <form th:action="@{|/venuedetails/${(index+-1)}|}">
-        <input type="submit" value="<"/>
-    </form>
 
-    <form th:action="@{|/venuedetails/${(index+1)}|}">
-        <input type="submit" value=">"/>
-    </form>
+            <form th:if="${index==1}" th:action="@{|/venuedetails/${count}|}">
+                <input type="submit" value="<"/>
+            </form>
+
+            <form  th:if="${index!=1}" th:action="@{|/venuedetails/${(index+-1)}|}">
+                <input type="submit" value="<"/>
+            </form>
+
+
+
+            <form th:if="${count==index}" th:action="@{|/venuedetails/1|}">
+                <input type="submit" value=">"/>
+            </form>
+            <form th:if="${count!=index}" th:action="@{|/venuedetails/${(index+1)}|}">
+                <input type="submit" value=">"/>
+            </form>
+
+
     <div class="startgrid">
         <p>Link with more info: </p>
         <p class="secondcol" th:text="${venue.getLinkmoreinfo()}">Linkmoreinfo</p>
