All filters added and css for buttons

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -10,7 +10,7 @@ h1, h2{
 
 nav ul {
     display: flex;
-    width: 800px;
+    width: 640px;
     margin: auto;
     height: 50px;
 }
@@ -60,6 +60,15 @@ p{
     padding: 2px;
 }
 
-#filter{
+.filter{
     display: flex;
+}
+
+.active{
+    background-color: green;
+    color: white;
+}
+
+.notactive{
+
 }
