--- a/src/main/resources/templates/venuedetails.html
+++ b/src/main/resources/templates/venuedetails.html
@@ -42,6 +42,9 @@
         <p>Food provided: </p>
         <p class="secondcol" th:text="${venue.isFoodProvided()}">Food provided</p>
 
+        <p>Capacity: </p>
+        <p class="secondcol" th:text="${venue.getCapacity()}">Capacity</p>
+
         <p>Indoor: </p>
         <p class="secondcol" th:text="${venue.isIndoor()}">Indoor</p>
 
