--- a/src/main/resources/templates/venuelist.html
+++ b/src/main/resources/templates/venuelist.html
@@ -14,19 +14,49 @@
         <p th:each="error : ${errors}" th:text="${error}">error</p>
     </div>
 <div th:if="${venues!=null}">
-    <div id="filter">
-    <p>Outdoor:</p>
-    <form th:action="@{/venuelist}">
-        <input type="submit" value="all">
+    <div class="filter">
+    <p>Outdoor: </p>
+    <form  th:action="@{/venuelist}">
+        <input th:class="${filtero==null || (!filtero.equals('yes') && !filtero.equals('no'))} ? active : notactive" type="submit" value="all">
     </form>
     <form th:action="@{/venuelist/outdoor/yes}">
-        <input type="submit" value="yes">
+        <input th:class="${filtero!=null && filtero.equals('yes')} ? active : notactive" type="submit" value="yes">
     </form>
     <form th:action="@{/venuelist/outdoor/no}">
-        <input type="submit" value="no">
+        <input th:class="${filtero!=null && filtero.equals('no')} ? active : notactive" type="submit" value="no">
     </form>
-
     </div>
+
+    <div class="filter">
+        <p>Indoor: </p>
+        <form th:action="@{/venuelist}">
+            <input th:class="${filteri==null || (!filteri.equals('yes') && !filteri.equals('no'))} ? active : notactive" type="submit" value="all">
+        </form>
+        <form th:action="@{/venuelist/indoor/yes}">
+            <input th:class="${filteri!=null && filteri.equals('yes')} ? active : notactive" type="submit" value="yes">
+        </form>
+        <form th:action="@{/venuelist/indoor/no}">
+            <input th:class="${filteri!=null && filteri.equals('no')} ? active : notactive" type="submit" value="no">
+        </form>
+    </div>
+
+    <div class="filter">
+        <p>Indoor: </p>
+        <form th:action="@{/venuelist}">
+            <input th:class="${filters==null || (!filters.equals('S') && !filters.equals('M') && !filters.equals('L'))} ? active : notactive" type="submit" value="all">
+        </form>
+        <form th:action="@{/venuelist/size/S}">
+            <input th:class="${filters!=null && filters.equals('S')} ? active : notactive" type="submit" value="S">
+        </form>
+        <form th:action="@{/venuelist/size/M}">
+            <input th:class="${filters!=null && filters.equals('M')} ? active : notactive" type="submit" value="M">
+        </form>
+        <form th:action="@{/venuelist/size/L}">
+            <input th:class="${filters!=null && filters.equals('L')} ? active : notactive" type="submit" value="L">
+        </form>
+    </div>
+
+
 <div th:each="venue : ${venues}">
     <a class="buttonLook mediumButton"
        th:href="@{|/venuedetails/${venueStat.index+1}}"
