--- a/src/main/resources/templates/venuedetails.html
+++ b/src/main/resources/templates/venuedetails.html
@@ -17,22 +17,22 @@
     <div th:if="${venue!=null}">
     <h2 th:text="${venue.getVenuename()}">venuedetails</h2>
 <div id="filter">
-            <form th:if="${index==1}" th:action="@{|/venuedetails/${count}|}">
-                <input type="submit" value="<"/>
-            </form>
+            <div th:if="${index==1}" >
+                <a th:href="@{|/venuedetails/${count}|}"><</a>
+            </div>
 
-            <form  th:if="${index!=1}" th:action="@{|/venuedetails/${(index+-1)}|}">
-                <input type="submit" value="<"/>
-            </form>
+            <div  th:if="${index!=1}">
+                <a th:href="@{|/venuedetails/${(index+-1)}|}"><</a>
+            </div>
 
 
 
-            <form th:if="${count==index}" th:action="@{|/venuedetails/1|}">
-                <input type="submit" value=">"/>
-            </form>
-            <form th:if="${count!=index}" th:action="@{|/venuedetails/${(index+1)}|}">
-                <input type="submit" value=">"/>
-            </form>
+            <div th:if="${count==index}" >
+                <a th:href="@{|/venuedetails/1|}">></a>
+            </div>
+            <div th:if="${count!=index}">
+                <a th:href="@{|/venuedetails/${(index+1)}|}">></a>
+            </div>
 </div>
 
     <div class="startgrid">
