--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -16,7 +16,7 @@ nav ul {
 }
 
 nav ul li {
-    width: 20%;
+    width: 25%;
     height: inherit;
     display: flex;
     justify-content: space-around;
@@ -73,4 +73,24 @@ p{
 
 .notactive{
 
+}
+
+a.buttonLook {
+    background-color: grey;
+    color: black;
+    text-decoration: none;
+    text-align: center;
+}
+
+a.buttonLook:hover {
+    background-color: dimgrey;
+    color: white;
+}
+
+a.mediumButton {
+    display: block;
+    margin: 10px auto;
+    width: 400px;
+    font-size: 1.2em;
+    padding: 1em;
 }
