--- a/src/main/resources/templates/venuelist.html
+++ b/src/main/resources/templates/venuelist.html
@@ -12,12 +12,16 @@
     <h2 th:text="${count}+' venues found'"></h2>
     <div th:if="${filter}" class="filter">
         <a th:href="@{/venuelist}">/\</a>
-
-        <p>Outdoor: </p>
-
-        <p>Indoor: </p>
-
-        <p>Indoor: </p>
+        <form>
+            <div class="onefilter">
+                <input type="submit" value="search">
+            </div>
+            <h3>Capacity:</h3>
+            <div class="onefilter">
+                <label for="minCapacity" class="filtername">Min </label>
+                <input type="number" id="minCapacity" name="minCapacity" value="0" step="50"> persons
+            </div>
+        </form>
 
     </div>
     <a th:unless="${filter}" class="prevnextbuttons" th:classappend="filter" th:href="@{/venuelist/filter}">\/</a>
