Filter op max capacity werkt

--- a/src/main/resources/templates/venuelist.html
+++ b/src/main/resources/templates/venuelist.html
@@ -21,6 +21,10 @@
                 <label for="minCapacity" class="filtername">Min </label>
                 <input type="number" id="minCapacity" name="minCapacity" th:value="${min}" step="50"> persons
             </div>
+            <div class="onefilter">
+                <label for="maxCapacity" class="filtername">Max </label>
+                <input type="number" id="maxCapacity" name="maxCapacity" th:value="${max}" step="50"> persons
+            </div>
         </form>
 
     </div>
