--- a/src/main/resources/templates/venuelist.html
+++ b/src/main/resources/templates/venuelist.html
@@ -55,7 +55,7 @@
     <div>
     <a class="buttonLook mediumButton"
        th:href="@{|/venuedetails/${venue.getId()}}"
-       ><span th:text="${venue.getVenuename()}"></span>
+       ><span th:text="${venue.venuename}"></span>
         <div th:text="|capacity ${venue.capacity}|" class="venueExtraInfo">maxNrOfPersons</div></a>
 
     </div>
